# tapestry-controller

./: .flake8  COLLECTIONS_FEATURE.md  COLLECTIONS_FINAL_UX.md  COLLECTIONS_UI_REDESIGN.md  COLLECTIONS_UPDATES.md  COLLECTIONS_UPLOAD_UX.md  README.md  case.FCStd  devices.yaml  drawing.py  epdiy.py  makefile  pyproject.toml  resizer_and_divider.py  send_image.py  tapestry-webui.service.template  test_positioning_runner.py
debug_scripts/: README.md  generate_synthetic_qr_test.py  validate_positioning.py
src/digink/: cli.py  controller.py  device.py  geometry.py  models.py  position_detection.py  positioning.py  qr_generation.py  screen_types.py  test_positioning.py
src/digink/webui/: __init__.py  app.py
src/digink/webui/static/: flash.js  positioning.js  script.js
src/digink/webui/templates/: base.html  flash.html  index.html  positioning.html
src/tapestry/: __init__.py  cli.py  controller.py  device.py  geometry.py  image_utils.py  models.py  perspective_correction.py  position_detection.py  qr_debug.py  qr_debug_cli.py  qr_generation.py  qr_generation_cli.py  screen_types.py  screensaver.py  settings.py
src/tapestry/webui/: __init__.py  app.py  collections_manager.py  collections_migration.py  device_monitor.py  flash_manager.py  image_cache.py  ota_manager.py  process_manager.py  screensaver.py
src/tapestry/webui/static/: collections.js  common.js  flash.js  homepage.js  positioning.js  script.js  style.css
src/tapestry/webui/templates/: base.html  collections.html  device_monitoring.html  flash.html  index.html  ota.html  positioning.html  qr_debug.html  screensaver.html
tests/: test_positioning_integration.py  test_positioning_system.py  test_qr_positioning.py
