[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tapestry"
version = "0.1.0"
description = "Distributed e-ink display controller (Tapestry)"
readme = "README.md"
authors = ["Nitz"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    {include = "tapestry", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pillow = ">=9.0.0"
requests = ">=2.25.0"
pyyaml = ">=6.0"
flask = ">=2.0.0"
qrcode = {extras = ["pil"], version = ">=8.2,<9.0"}
opencv-python = ">=4.5.0"
numpy = ">=1.20.0"
pyzbar = ">=0.1.9,<0.2.0"
pydantic = ">=2.0.0"
pydantic-settings = ">=2.0.0"
toml = ">=0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
black = ">=22.0"
mypy = ">=0.950"
ruff = "^0.13.1"

[tool.poetry.scripts]
tapestry = "tapestry.cli:main"
tapestry-webui = "tapestry.webui.app:main"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

